--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: 0.4.0+8
+  firebase_core: ^0.4.4
   firebase_storage: 3.0.4
   image_cropper: 1.0.2
+  cloud_firestore: ^0.13.7
   image_picker: 0.6.0+17
-
+  firebase_auth: ^0.16.1
+  google_sign_in: ^4.5.1
+  http: 0.12.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
